--- a/style.css
+++ b/style.css
@@ -295,6 +295,10 @@ gap: 10px;
     height: 32px;
     line-height: 16px;
   }
+  #overlay-search-results .search-result-item {
+flex: 0 0 165px;
+    
+  }
 }
 
 /* Search Container */
@@ -407,7 +411,7 @@ gap: 10px;
   overflow-y: auto;
   display: flex;
   flex-wrap: wrap;
-  gap: 18px;
+  gap: 5px;
   justify-content: center;
 }
 
@@ -430,7 +434,7 @@ gap: 10px;
 
 #overlay-search-results .search-result-thumb {
   width: 100%;
-  height: 120px;
+  height: auto;
   object-fit: cover;
   background: #ddd;
 }
@@ -474,6 +478,7 @@ gap: 10px;
   animation: pulse 1.2s infinite;
   z-index: 2;
 }
+
 
 
 
