--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   font-family: Arial, sans-serif;
   background: #f4f7fb;
   color: #222;
-  padding: 20px;
+  padding: 0px 20px;
 }
 
 header {
@@ -240,7 +240,7 @@ gap: 10px;
 /* Large Phones / Small Tablets */
 @media (max-width: 768px) {
   body {
-    padding: 15px;
+    padding: 0px 15px;
   }
 
   h1 {
@@ -270,7 +270,7 @@ gap: 10px;
 /* Small Phones */
 @media (max-width: 480px) {
   body {
-    padding: 10px;
+    padding: 0px 10px;
   }
 
   h1 {
@@ -587,6 +587,7 @@ flex: 0 0 130px! important;
   display: flex;
   z-index: 9999;
 }
+
 
 
 
