--- a/style.css
+++ b/style.css
@@ -494,6 +494,7 @@ flex: 0 0 130px! important;
   align-items: center;
   z-index: 10000;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  margin-bottom: 15px;
 }
 
 /* Left Section */
@@ -587,6 +588,7 @@ flex: 0 0 130px! important;
   display: flex;
   z-index: 9999;
 }
+
 
 
 
