--- a/Matchinformation/style.css
+++ b/Matchinformation/style.css
@@ -124,7 +124,7 @@
 }
 
 .open-arrow {
-  display: flex;
+ display: inline-flex;
   align-items: center;
   color: #ffcc00; /* arrow icon color */
 }
@@ -134,10 +134,9 @@
 }
 
 .stream-label {
-  display: flex;
-  justify-content: space-between;
+display: flex;
   align-items: center;
-  flex: 1;
 }
+
 
 
