--- a/featuredslider.css
+++ b/featuredslider.css
@@ -129,9 +129,10 @@ display: flex;
   left: 50%;
   transform: translateX(-50%);
   font-size: 20px;
-  font-weight: 800;
+  font-weight: 550;
   letter-spacing: 0.5px;
   white-space: nowrap;
+  font-size: 14px;
 }
 /* Countdown */
 .countdown {
@@ -265,3 +266,4 @@ border-radius:0.5rem;
   from { opacity:0; transform:translateY(8px); }
   to { opacity:1; transform:translateY(0); }
 }
+
